--- a/index.html
+++ b/index.html
@@ -37,18 +37,21 @@
 		<section class="icon-bar">
 			<ul>
 				<li>
-					<a href="mypage.html" target="_blank">
+					<a href="myresume.html" target="_blank">
 						<i class="fa fa-user"></i>	
+						<p>我的简历</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
 						<i class="fa fa-weixin"></i>
+						<p>我的微信</p>
 					</a>
 				</li>
 				<li>
 					<a href="http://codepen.io/Rosemond/#">
 						<i class="fa fa-codepen"></i>
+						<p>我的CodePen</p>
 					</a>
 				</li>
 			</ul>
