change some links
I add my weixin and changed some links

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 				<li>
 					<a href="myresume.html" target="_blank">
 						<i class="fa fa-user"></i>	
-						<p>我的简历</p>
+						<p class="info">我的简历</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
+					<a href="weixin.html" target="_blank">
 						<i class="fa fa-weixin"></i>
-						<p>我的微信</p>
+						<p class="info">我的微信</p>
 					</a>
 				</li>
 				<li>
 					<a href="http://codepen.io/Rosemond/#">
 						<i class="fa fa-codepen"></i>
-						<p>我的CodePen</p>
+						<p class="info">我的CodePen</p>
 					</a>
 				</li>
 			</ul>
