--- a/myresume.html
+++ b/myresume.html
@@ -102,7 +102,7 @@
 	            <div class="row">
 	              <div class="col-md-5">
 	                <div class="time">2015-9-20 至 2015-3-20</div>
-	                <div class="title">于河南XXX公司工作</div>
+	                <div class="title">于河南曲陌软件有限公司工作</div>
 	                <div class="description">前端开发实习</div>
 	              </div>
 	              <div class="col-md-7">利用大四开始实习，在大神的带领下开始了我的前端之路。在这期间主要精力放在<span class="yellow">css3、bootstrap</span>的一些应用上。
@@ -113,7 +113,7 @@
 	            <div class="row">
 	              <div class="col-md-5">
 	                <div class="time">2015-9-20 至 2015-3-20</div>
-	                <div class="title">于河南XXX公司工作</div>
+	                <div class="title">于河南飞兔网络科技公司工作</div>
 	                <div class="description">前端开发</div>
 	              </div>
 	              <div class="col-md-7">在这段时间内，我有了很多的收获，我花了更多的精力在<span class="yellow">JavaScript</span>上。从编写高质量的JS代码，到对JS框架，<span class="yellow">Vue.js</span>、<span class="yellow">Angular.js</span>和<span class="yellow">ES6</span>的学习。我对JS有了更深的理解。同时我也对深入理解计算机有着强烈的学习兴趣。<br>
@@ -125,7 +125,62 @@
 	      </div>
 	    </div>
 	  </section>
-
+	  <section class="section">
+	    <div class="container">
+	      <div class="section-bg section-header-bg"></div>
+	      <div class="section-bg section-content-bg"></div>
+	      <header class="header">
+	        <div class="content-box">
+	          <h2 class="title">项目经验&nbsp;/&nbsp;<small><i>Experience</i></small></h2>
+	          <div class="description">我的一些项目经验</div>
+	        </div>
+	      </header>
+	      <div class="section-content">
+	        <div class="experience">
+	          <div class="item">
+	            <div class="row">
+	              <div class="col-md-5">
+	                <div class="title">新鲜事新闻类App</div>
+	                <div class="description">新鲜事是一个搜集各种新鲜咨询的新闻类App，主要为用户带来新奇和时讯。</div>
+	              </div>
+	              <div class="col-md-7">在这个项目中，我主要负责静态页面，及数据交互等工作。这个项目是使用Ionic作为框架，利用Angular.js来进行搭建的。是一个混合开发App。在开发过程中考虑到多种因素没有使用高版本，而是使用Ionic 1.x版本。在这个项目中，界面的实现都比较简单，相比之下，在登录注册、收藏部分较有难度。在这一部分，主要使用了<span class="yellow">web-token技术</span>，增加用户数据的安全性和进行用户信息的登录提交和验证。使用HTML5的新特性<span class="yellow">localStorage</span>来进行一些用户信息的数据存储。的一些应用上。
+	              </div>
+	            </div>
+	          </div>
+	          <div class="item">
+	            <div class="row">
+	              <div class="col-md-5">
+	                <div class="title">美物集App</div>
+	                <div class="description">美物集是一个女向性的购物类App，主要以粉色为主基调，强调每个女生都可以收获少女的一面。</div>
+	              </div>
+	              <div class="col-md-7">在这个项目中，我主要负责制作静态页面。这个项目的UI界面是使用<span class="yellow">SUI</span>框架进行搭建的。主要有首页，分类列表页，用户中心，商品详情页等等。这个项目是我第一次接触移动端，同时做的是购物类App，于是选用了阿里的这款简单易上手，同时UI界面适合购物类App的框架进行搭建。使用了<span class="yellow">bower</span>进行web包管理。使用<span class="yellow">zepto</span>添加一些简单的交互。<span class="yellow">git</span>进行版本控制。
+	              </div>
+	            </div>
+	          </div>
+	          <div class="item">
+	            <div class="row">
+	              <div class="col-md-5">
+	                <div class="title">绿瞻建筑科技企业站</div>
+	                <!-- <div class="description">美物集是一个女向性的购物类App，主要以粉色为主基调，强调每个女生都可以收获少女的一面。</div> -->
+	              </div>
+	              <div class="col-md-7">在这个项目中我一人独立完成页面的设计与页面的实现。这个项目使用Bootstrap进行搭建的自适应企业站，同时，使用CSS3添加了一些简单的动画效果，使用<span class="yellow">ScrollReveal.js</span>、<span class="yellow">Smooth-scroll.js</span>等JS插件，提高了用户体验。
+	              </div>
+	            </div>
+	          </div>
+	          <div class="item">
+	            <div class="row">
+	              <div class="col-md-5">
+	                <div class="title">九牛科技有限公司官网</div>
+	                <!-- <div class="description">美物集是一个女向性的购物类App，主要以粉色为主基调，强调每个女生都可以收获少女的一面。</div> -->
+	              </div>
+	              <div class="col-md-7">在这个项目中我主要负责静态页面的设计与实现。这个项目主要是使用Bootstrap进行搭建。在实际实现过程中，发现css代码冗余而且代码杂乱同时Bootstrap有些地方也并不适合这个项目，于是使用<span class="yellow">Sass</span>对css进行了重写，增加了CSS代码的可读性和可维护性。在这其间，我开始注重代码的质量，不再是简单的对框架的完全套用，而是将其化为我自己的东西。
+	              </div>
+	            </div>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	  </section>
 	  <section class="section">
 	    <div class="container">
 	      <div class="section-bg section-header-bg"></div>
