Change some infos
I changed my picture and address.

--- a/myresume.html
+++ b/myresume.html
@@ -18,7 +18,7 @@
 	      <header class="header">
 	        <div class="header-box">
 	          <div class="avatar wow inShow no-print">
-	            <img src="img/me.jpg" alt="logo" class="img-responsive">
+	            <img src="img/avatar.jpg" alt="logo" class="img-responsive">
 	          </div>
 	          <h1 class="name text-center wow inShow no-print">Rosemond</h1>
 	          <h1 class="name text-center hide show-print-block">史如梦</h1>
@@ -37,7 +37,7 @@
 	              <div class="col-md-6 col-lg-3">
 	                <div class="item wow inShow" data-wow-delay="0.3s">
 	                  <h4>Location</h4>
-	                  <address>河南·郑州</address>
+	                  <address>上海</address>
 	                </div>
 	              </div>
 	              <div class="col-md-6 col-lg-3">
@@ -77,7 +77,7 @@
 	      </header>
 	      <div class="section-content">
 	        <div class="intro">
-	          <p><span class="yellow">93</span>年，<span class="yellow">河南郑州</span>人。大学<span class="yellow">本科</span>就读于河南理工大学，电子信息工程专业。</p>
+	          <p><span class="yellow">93</span>年，<span class="yellow">河南郑州</span>人，现居<span class="yellow">上海</span>。大学<span class="yellow">本科</span>就读于河南理工大学，电子信息工程专业。</p>
 	          <p></p>
 	          <p>我喜欢设计，喜欢美的享受，曾有过室内设计的实习经历。追求良好的用户体验。对产品拥有热情。</p>
 	          <p>善于学习，从实习时开始学习html、css到现在能完成网站和移动端的前端设计和实现。</p>
@@ -113,7 +113,7 @@
 	            <div class="row">
 	              <div class="col-md-5">
 	                <div class="time">2015-9-20 至 2015-3-20</div>
-	                <div class="title">于河南飞兔网络科技公司工作</div>
+	                <div class="title">于郑州飞兔网络科技公司工作</div>
 	                <div class="description">前端开发</div>
 	              </div>
 	              <div class="col-md-7">在这段时间内，我有了很多的收获，我花了更多的精力在<span class="yellow">JavaScript</span>上。从编写高质量的JS代码，到对JS框架，<span class="yellow">Vue.js</span>、<span class="yellow">Angular.js</span>和<span class="yellow">ES6</span>的学习。我对JS有了更深的理解。同时我也对深入理解计算机有着强烈的学习兴趣。<br>
@@ -408,7 +408,7 @@
 	            <div class="col-md-6 col-lg-3">
 	              <div class="item">
 	                <h4>Location</h4>
-	                <address>河南省郑州市上街区济源路78号院1栋2楼西户</address>
+	                <address>上海市闵行区虹桥镇吴中路730弄</address>
 	              </div>
 	            </div>
 	            <div class="col-md-6 col-lg-3">
