--- a/myresume.html
+++ b/myresume.html
@@ -101,22 +101,11 @@
 	          <div class="item">
 	            <div class="row">
 	              <div class="col-md-5">
-	                <div class="time">2015-9-20 至 2015-3-20</div>
-	                <div class="title">于河南曲陌软件有限公司工作</div>
-	                <div class="description">前端开发实习</div>
-	              </div>
-	              <div class="col-md-7">利用大四开始实习，在大神的带领下开始了我的前端之路。在这期间主要精力放在<span class="yellow">css3、bootstrap</span>的一些应用上。
-	              </div>
-	            </div>
-	          </div>
-	          <div class="item">
-	            <div class="row">
-	              <div class="col-md-5">
-	                <div class="time">2015-9-20 至 2015-3-20</div>
+	                <div class="time">2015-9-20 至 至今</div>
 	                <div class="title">于郑州飞兔网络科技公司工作</div>
 	                <div class="description">前端开发</div>
 	              </div>
-	              <div class="col-md-7">在这段时间内，我有了很多的收获，我花了更多的精力在<span class="yellow">JavaScript</span>上。从编写高质量的JS代码，到对JS框架，<span class="yellow">Vue.js</span>、<span class="yellow">Angular.js</span>和<span class="yellow">ES6</span>的学习。我对JS有了更深的理解。同时我也对深入理解计算机有着强烈的学习兴趣。<br>
+	              <div class="col-md-7">在这段时间内，我在大神的带领下，开始了我的前端开发之路。在这期间，我有了飞速的成长。我有了很多的收获，我花了更多的精力在<span class="yellow">JavaScript</span>上。从编写高质量的JS代码，到对JS框架，<span class="yellow">Vue.js</span>、<span class="yellow">Angular.js</span>和<span class="yellow">ES6</span>的学习。我对JS有了更深的理解。同时我也对深入理解计算机有着强烈的学习兴趣。<br>
 	              在这近一年的工作中，我参与了许多项目，<span class="yellow">pc端</span>和<span class="yellow">移动端</span>都有涉及，积累了许多经验。
 	              </div>
 	            </div>
