--- a/myresume.html
+++ b/myresume.html
@@ -18,7 +18,7 @@
 	      <header class="header">
 	        <div class="header-box">
 	          <div class="avatar wow inShow no-print">
-	            <img src="img/big-head_big.jpg" alt="logo" class="img-responsive">
+	            <img src="img/me.jpg" alt="logo" class="img-responsive">
 	          </div>
 	          <h1 class="name text-center wow inShow no-print">Rosemond</h1>
 	          <h1 class="name text-center hide show-print-block">史如梦</h1>
